Fixed a minor discord flaw
Discord's .titlebar class was covering part of the top of the app,
fixed.

--- a/themes/DarkMatter.theme.css
+++ b/themes/DarkMatter.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"Dark_Matter","description":"A cold, dark & frosty theme","author":"CosmicSalad","version":"1.4.5"}*//
+//META{"name":"Dark_Matter","description":"A cold, dark & frosty theme","author":"CosmicSalad","version":"1.4.5"}*//{}
 
 /*
                      _                _                                   _ 
@@ -37,6 +37,10 @@ textarea {
 .scroller-wrap .scroller::-webkit-scrollbar-track-piece {
 	border:3px solid rgba(255,255,255,0) !important;
 	background-color:rgba(0,0,0,0.3) !important;
+}
+
+.titlebar {
+	height:auto !important;
 }
 
 /*
@@ -455,6 +459,10 @@ textarea {
 .title-wrap {
 	border-bottom:1px solid rgba(0,0,0,0.3) !important;
 	background:rgba(0,0,0,0.95) !important;
+}
+
+.header-toolbar button.active {
+	background-color:rgba(255,255,255,0.1);
 }
 
 .bot-tag,
